Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -193,8 +193,7 @@
    "outputs": [],
    "source": [
     "def parse_trips(trips):\n",
-    "    return list(map(lambda trip: trip['trip_distance', 'pickup_latitude', 'pickup_longitude']))\n",
-    "    pass"
+    "    return list(map(lambda trip: trip['trip_distance', 'pickup_latitude', 'pickup_longitude'], trips))\n"
    ]
   },
   {
