--- a/index.ipynb
+++ b/index.ipynb
@@ -188,12 +188,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def parse_trips(trips):\n",
-    "    return list(map(lambda trip: trip['trip_distance', 'pickup_latitude', 'pickup_longitude'], trips))\n"
+    "    return list(map(lambda trip: trip['trip_distance', 'pickup_latitude', 'pickup_longitude'], trips))"
    ]
   },
   {
