--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -193,7 +193,7 @@
    "outputs": [],
    "source": [
     "def parse_trips(trips):\n",
-    "    return list(map(lambda trip: , trips))"
+    "    return list(map(lambda trip: trip[['trip_dis, trips))"
    ]
   },
   {
