--- a/index.ipynb
+++ b/index.ipynb
@@ -193,7 +193,7 @@
    "outputs": [],
    "source": [
     "def parse_trips(trips):\n",
-    "    return list(map(lambda trip: {key : trip[key] for key in ['trip_distance', 'pickup_', trips))"
+    "    return list(map(lambda trip: {key : trip[key] for key in ['trip_distance', 'pickup_latitude', 'pick', trips))"
    ]
   },
   {
