Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -188,9 +188,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-8-51fd6126cbdc>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-51fd6126cbdc>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return list(map(lambda trip: {key : trip[key] for key in ['trip_distance', 'pickup_latitude', 'pickup_longitude'], trips))\u001b[0m\n\u001b[0m                                                                                                                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def parse_trips(trips):\n",
     "    return list(map(lambda trip: {key : trip[key] for key in ['trip_distance', 'pickup_latitude', 'pickup_longitude'], trips))"
