Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -236,7 +236,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def float_values(trips):    \n",
+    "def float_values(trips):\n",
+    "        return list(map(lambda trip: {key : trip[key] for key in ['trip_distance', 'pickup_latitude', 'pickup_longitude']}, trips))\n",
     "    pass"
    ]
   },
