Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -232,22 +232,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "unindent does not match any outer indentation level (<tokenize>, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<tokenize>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    pass\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unindent does not match any outer indentation level\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def float_values(trips):\n",
-    "        return list(map(lambda trip: {key : float(trip[key]) for key in ['trip_distance', 'pickup_latitude', 'pickup_longitude']}, trips))\n",
-    "    pass"
+    "        return list(map(lambda trip: {key : float(trip[key]) for key in ['trip_distance', 'pickup_latitude', 'pickup_longitude']}, trips))"
    ]
   },
   {
