--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -242,16 +242,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cleaned_trips = float_values(trips)"
+    "cleaned_trips = float_values(parsed_trips)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
        " 'pickup_longitude': -73.78115}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
