--- a/index.ipynb
+++ b/index.ipynb
@@ -446,7 +446,7 @@
    "outputs": [],
    "source": [
     "def location(trip):\n",
-    "    return trip[['pickup_longitude']]\n",
+    "    return trip[['pickup_longitude', 'pickup_longitude']]\n",
     "    pass"
    ]
   },
