--- a/index.ipynb
+++ b/index.ipynb
@@ -446,7 +446,7 @@
    "outputs": [],
    "source": [
     "def location(trip):\n",
-    "    return [trip['pickup_taitude'], trip['pickup_latitude']]\n",
+    "    return [trip['pickup_latitude'], trip['pickup_longtude']]\n",
     "    pass"
    ]
   },
