Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -484,7 +484,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def to_marker(location):\n",
+    "def to_marker(loc):\n",
     "    return folium.CircleMarker(location = location, radius = 6)"
    ]
   },
