--- a/index.ipynb
+++ b/index.ipynb
@@ -528,7 +528,7 @@
    "outputs": [],
    "source": [
     "def markers_from_trips(trips):\n",
-    "    return list(map(lambda trip: to_marker(location(trip))))"
+    "    return list(map(lambda trip: to_marker(location(trip))),trip)"
    ]
   },
   {
