--- a/index.ipynb
+++ b/index.ipynb
@@ -621,7 +621,7 @@
    "outputs": [],
    "source": [
     "def map_from(location, zoom_amount):\n",
-    "    manhattan_map = folium.Map(location=[40.7589, -73.9851], zoom_start=11)\n",
+    "    manhattan_map = folium.Map(location=location, zoom_start=11)\n",
     "    pass"
    ]
   },
