Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -621,8 +621,8 @@
    "outputs": [],
    "source": [
     "def map_from(location, zoom_amount):\n",
-    "    manhattan_map = folium.Map(location=location, zoom_start=11)\n",
-    "    pass"
+    "    manhattan_map = folium.Map(location=location, zoom_start=zoom_amount)\n",
+    "    "
    ]
   },
   {
