Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -622,7 +622,7 @@
    "source": [
     "def map_from(location, zoom_amount):\n",
     "    manhattan_map = folium.Map(location=location, zoom_start=zoom_amount)\n",
-    "    "
+    "    for ma"
    ]
   },
   {
