Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -622,7 +622,8 @@
    "source": [
     "def map_from(location, zoom_amount):\n",
     "    manhattan_map = folium.Map(location=location, zoom_start=zoom_amount)\n",
-    "    for marker in trip_markers"
+    "    for marker in trip_markers:\n",
+    "        "
    ]
   },
   {
