Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -623,7 +623,7 @@
     "def map_from(location, zoom_amount):\n",
     "    manhattan_map = folium.Map(location=location, zoom_start=zoom_amount)\n",
     "    for marker in trip_markers:\n",
-    "        marker.add_to(manhattan_map)"
+    "        marker."
    ]
   },
   {
