Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -624,7 +624,7 @@
     "    manhattan_map = folium.Map(location=location, zoom_start=zoom_amount)\n",
     "    for marker in trip_markers:\n",
     "        marker.add_to(manhattan_map)\n",
-    "        "
+    "    return manhatt"
    ]
   },
   {
