--- a/index.ipynb
+++ b/index.ipynb
@@ -697,8 +697,8 @@
    "outputs": [],
    "source": [
     "def add_markers(markers, map_obj):\n",
-    "        for marker in trip_markers:\n",
-    "        marker.add_to(manhattan_map)\n",
+    "    for marker in trip_markers:\n",
+    "        marker.add_to(ma)\n",
     "    pass"
    ]
   },
