--- a/index.ipynb
+++ b/index.ipynb
@@ -698,8 +698,8 @@
    "source": [
     "def add_markers(markers, map_obj):\n",
     "    for marker in trip_markers:\n",
-    "        marker.add_to(ma)\n",
-    "    pass"
+    "        marker.add_to(map_obj)\n",
+    "    "
    ]
   },
   {
