Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -692,14 +692,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
     "def add_markers(markers, map_obj):\n",
     "    for marker in trip_markers:\n",
     "        marker.add_to(map_obj)\n",
-    "    "
+    "    return map_obj"
    ]
   },
   {
