Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -767,7 +767,7 @@
     "\n",
     "def distance_location(selected_trip, neighbor_trip):\n",
     "    x1 = location(selected_trip)[0]\n",
-    "    y1 = location()\n",
+    "    y1 = location(selected_trip)[1]\n",
     "    pass"
    ]
   },
