Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -768,6 +768,7 @@
     "def distance_location(selected_trip, neighbor_trip):\n",
     "    x1 = location(selected_trip)[0]\n",
     "    y1 = location(selected_trip)[1]\n",
+    "    x2 = location(se)\n",
     "    pass"
    ]
   },
