Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -768,8 +768,7 @@
     "def distance_location(selected_trip, neighbor_trip):\n",
     "    x1 = location(selected_trip)[0]\n",
     "    y1 = location(selected_trip)[1]\n",
-    "    x2 = location(neighbor_trip)[0]\n",
-    "    y2 = location(nei)\n",
+    "    x2 = location(neighbor_trip)\n",
     "    pass"
    ]
   },
