--- a/index.ipynb
+++ b/index.ipynb
@@ -770,7 +770,7 @@
     "    y1 = location(selected_trip)[1]\n",
     "    x2 = location(neighbor_trip)[0]\n",
     "    y2 = location(neighbor_trip)[1]\n",
-    "    distance\n",
+    "    distance = math.sqrt(())\n",
     "    pass"
    ]
   },
