--- a/index.ipynb
+++ b/index.ipynb
@@ -770,8 +770,7 @@
     "    y1 = location(selected_trip)[1]\n",
     "    x2 = location(neighbor_trip)[0]\n",
     "    y2 = location(neighbor_trip)[1]\n",
-    "    distance = math.sqrt((x2-x1)**2+(y2))\n",
-    "    pass"
+    "    return ((x2-x1)**2+(y2-y1)**2)"
    ]
   },
   {
