--- a/index.ipynb
+++ b/index.ipynb
@@ -811,7 +811,7 @@
    "outputs": [],
    "source": [
     "def distance_between_neighbors(selected_trip, neighbor_trip):\n",
-    "    \n",
+    "    neighbor_trip\n",
     "    pass"
    ]
   },
