--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -806,34 +806,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def distance_between_neighbors(selected_trip, neighbor_trip):\n",
-    "    neighbor_trip['distance_from_selected'] = distance_location(selected_trip, neighbor_trip)\n",
-    "    return neighbor_trip"
+    "    neighbor_trip['distance_from_selected'] = distance_location()\n",
+    "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'pickup_latitude': 40.766931,\n",
-       " 'pickup_longitude': -73.982098,\n",
-       " 'trip_distance': 1.3,\n",
-       " 'distance_from_selected': 0.23505256047318146}"
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "distance_between_neighbors(first_trip, second_trip)\n",
     "\n",
