Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -873,7 +873,7 @@
    "outputs": [],
    "source": [
     "def distance_all(selected_individual, neighbors):\n",
-    "    return list(map(lambda neighbor: distance))\n",
+    "    return list(map(lambda ))\n",
     "    pass"
    ]
   },
