Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -874,7 +874,7 @@
    "source": [
     "def distance_all(selected_individual, neighbors):\n",
     "    filter(lambda neighbor != selected_individual, nighbors)\n",
-    "    return list(map(lambda neighbor: distance))\n",
+    "    return list(map(lambda neighbor: distance_between_neighbors(selected_individual)))\n",
     "    pass"
    ]
   },
