Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -868,12 +868,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
     "def distance_all(selected_individual, neighbors):\n",
-    "    filter(lambda neighbor: neighbor != selected_individual, neighbors)\n",
+    "    #filter(lambda neighbor: neighbor != selected_individual, neighbors)\n",
     "    return list(map(lambda neighbor: distance_between_neighbors(selected_individual, neighbor), neighbors))"
    ]
   },
