--- a/index.ipynb
+++ b/index.ipynb
@@ -873,7 +873,7 @@
    "outputs": [],
    "source": [
     "def distance_all(selected_individual, neighbors):\n",
-    "    #filter(lambda neighbor: neighbor != selected_individual, neighbors)\n",
+    "    nfilter(lambda neighbor: neighbor != selected_individual, neighbors)\n",
     "    return list(map(lambda neighbor: distance_between_neighbors(selected_individual, neighbor), neighbors))"
    ]
   },
