Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -868,18 +868,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
     "def distance_all(selected_individual, neighbors):\n",
-    "    nfilter(lambda neighbor: neighbor != selected_individual, neighbors)\n",
+    "    neighbors = list(filter(lambda neighbor: neighbor != selected_individual, neighbors))\n",
     "    return list(map(lambda neighbor: distance_between_neighbors(selected_individual, neighbor), neighbors))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -903,7 +903,7 @@
        "  'distance_from_selected': 0.24242215976473674}]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
