--- a/index.ipynb
+++ b/index.ipynb
@@ -868,42 +868,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
     "def distance_all(selected_individual, neighbors):\n",
-    "    neighbors = list(filter(lambda neighbor: neighbor != selected_individual, neighbors))\n",
+    "    neighbors = list(filter(lambda neighbor: neighbor = selected_individual, neighbors))\n",
     "    return list(map(lambda neighbor: distance_between_neighbors(selected_individual, neighbor), neighbors))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'trip_distance': 18.38,\n",
-       "  'pickup_latitude': 40.64499,\n",
-       "  'pickup_longitude': -73.78115,\n",
-       "  'distance_from_selected': 0.0},\n",
-       " {'trip_distance': 1.3,\n",
-       "  'pickup_latitude': 40.766931,\n",
-       "  'pickup_longitude': -73.982098,\n",
-       "  'distance_from_selected': 0.23505256047318146},\n",
-       " {'trip_distance': 4.5,\n",
-       "  'pickup_latitude': 40.77773,\n",
-       "  'pickup_longitude': -73.951902,\n",
-       "  'distance_from_selected': 0.2162779533470808},\n",
-       " {'trip_distance': 2.4,\n",
-       "  'pickup_latitude': 40.795678,\n",
-       "  'pickup_longitude': -73.971049,\n",
-       "  'distance_from_selected': 0.24242215976473674}]"
+       "[]"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
