--- a/index.ipynb
+++ b/index.ipynb
@@ -873,7 +873,7 @@
    "outputs": [],
    "source": [
     "def distance_all(selected_individual, neighbors):\n",
-    "    return list(map(lambda neighbor: distance_between_neighbors(selected_individual, neighbor), neighbors))"
+    "    rlist(map(lambda neighbor: distance_between_neighbors(selected_individual, neighbor), neighbors))"
    ]
   },
   {
@@ -925,7 +925,7 @@
    "outputs": [],
    "source": [
     "def nearest_neighbors(selected_trip, trips, number = 3):\n",
-    "    "
+    "    return "
    ]
   },
   {
