Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -873,7 +873,8 @@
    "outputs": [],
    "source": [
     "def distance_all(selected_individual, neighbors):\n",
-    "    cleaned_trips = list(map(lambda neighbor: distance_between_neighbors(selected_individual, neighbor), neighbors))"
+    "    cleaned_trips = list(map(lambda neighbor: distance_between_neighbors(selected_individual, neighbor), neighbors))\n",
+    "    return list(filter(lambda trips))"
    ]
   },
   {
