Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -874,7 +874,7 @@
    "source": [
     "def distance_all(selected_individual, neighbors):\n",
     "    cleaned_trips = list(map(lambda neighbor: distance_between_neighbors(selected_individual, neighbor), neighbors))\n",
-    "    return list(filter(lambda trips))"
+    "    return list(filter(lambda trip: trip))"
    ]
   },
   {
