--- a/index.ipynb
+++ b/index.ipynb
@@ -879,9 +879,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'trip_distance': 1.3,\n",
+       "  'pickup_latitude': 40.766931,\n",
+       "  'pickup_longitude': -73.982098,\n",
+       "  'distance_from_selected': 0.23505256047318146},\n",
+       " {'trip_distance': 4.5,\n",
+       "  'pickup_latitude': 40.77773,\n",
+       "  'pickup_longitude': -73.951902,\n",
+       "  'distance_from_selected': 0.2162779533470808},\n",
+       " {'trip_distance': 2.4,\n",
+       "  'pickup_latitude': 40.795678,\n",
+       "  'pickup_longitude': -73.971049,\n",
+       "  'distance_from_selected': 0.24242215976473674}]"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cleaned_trips and distance_all(first_trip, cleaned_trips[0:4])"
    ]
@@ -900,6 +922,7 @@
    "outputs": [],
    "source": [
     "def nearest_neighbors(selected_trip, trips, number = 3):\n",
+    "    sorted\n",
     "    return "
    ]
   },
