--- a/index.ipynb
+++ b/index.ipynb
@@ -922,7 +922,7 @@
    "outputs": [],
    "source": [
     "def nearest_neighbors(selected_trip, trips, number = 3):\n",
-    "    sordistance_all(selected_trip, trips)\n",
+    "    sorted(distance_all(selected_trip, trips), key = 'di'\n",
     "    return "
    ]
   },
