--- a/index.ipynb
+++ b/index.ipynb
@@ -922,7 +922,7 @@
    "outputs": [],
    "source": [
     "def nearest_neighbors(selected_trip, trips, number = 3):\n",
-    "    return sorted(distance_all(selected_trip, trips), key = \n",
+    "    return sorted(distance_all(selected_trip, trips), key = lambda trip: trip['distance_']\n",
     "    "
    ]
   },
