Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -923,7 +923,7 @@
    "source": [
     "def nearest_neighbors(selected_trip, trips, number = 3):\n",
     "    processed_trips = distance_all(selected_trip, trips)\n",
-    "    return , key = lambda trip: trip['distance_from_selected']\n",
+    "    return sorted(proce, key = lambda trip: trip['distance_from_selected']\n",
     "    "
    ]
   },
